applications/wordpress/chart/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: wordpress-http
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wordpress
