applications/wordpress/chart/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: wordpress
spec:
  to:
    kind: Service
    name: wordpress-custom-bm4
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
